--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,9 +40,9 @@
         <!-- Spinner End -->
 
         <!-- Topbar Start -->
-        <div class="container-fluid bg-primary px-5 d-none d-lg-block">
-            <div class="row gx-0">
-                <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
+        <!-- <div class="container-fluid bg-primary px-5 d-none d-lg-block">
+            <div class="row gx-0"> -->
+                <!-- <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center" style="height: 45px;">
                         <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
                         <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -50,12 +50,12 @@
                         <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
                         <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
                     </div>
-                </div>
-                <div class="col-lg-4 text-center text-lg-end">
-                    <div class="d-inline-flex align-items-center" style="height: 45px;">
-                        <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>Register</small></a>
-                        <a href="#"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
-                        <div class="dropdown">
+                </div> -->
+                <!-- <div class="col-lg-4 text-center text-lg-end">
+                    <div class="d-inline-flex align-items-center" style="height: 45px;"> -->
+                        <!-- <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>Register</small></a> -->
+                        <!-- <a href="#"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a> -->
+                        <!-- <div class="dropdown">
                             <a href="#" class="dropdown-toggle text-light" data-bs-toggle="dropdown"><small><i class="fa fa-home me-2"></i> My Dashboard</small></a>
                             <div class="dropdown-menu rounded">
                                 <a href="#" class="dropdown-item"><i class="fas fa-user-alt me-2"></i> My Profile</a>
@@ -64,11 +64,21 @@
                                 <a href="#" class="dropdown-item"><i class="fas fa-cog me-2"></i> Account Settings</a>
                                 <a href="#" class="dropdown-item"><i class="fas fa-power-off me-2"></i> Log Out</a>
                             </div>
-                        </div>
+                        </div> -->
+                    <!-- </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="container-fluid bg-primary px-5 d-none d-lg-block">
+            <div class="row gx-0 justify-content-end"> <!-- Tambahkan justify-content-end -->
+                <div class="col-lg-4 text-end"> <!-- Gunakan text-end agar teks sejajar ke kanan -->
+                    <div class="d-inline-flex align-items-center" style="height: 45px;">
+                        <a href="#"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
                     </div>
                 </div>
             </div>
         </div>
+        
         <!-- Topbar End -->
 
         <!-- Navbar & Hero Start -->
@@ -86,9 +96,9 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
                         <a href="services.html" class="nav-item nav-link">Infografis</a>
-                        <a href="packages.html" class="nav-item nav-link">Packages</a>
+                        <a href="packages.html" class="nav-item nav-link">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="destination.html" class="dropdown-item">Destination</a>
@@ -99,11 +109,11 @@
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        </div> -->
+                        <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                     </div>
-                    <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
-                </div>
+                    <!-- <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
+                </div> -->
             </nav>
 
             <!-- Carousel Start -->
@@ -132,11 +142,10 @@
                         
             <!-- Carousel End -->
         </div>
-        <div class="container-fluid search-bar position-relative" style="top: -50%; transform: translateY(-50%);">
-            <div class="container">
+        <div class="container-fluid w-100 search-bar position-relative" style="top: -50%; transform: translateY(-50%);">
                 <div class="position-relative rounded-pill w-100 mx-auto p-5" style="background: rgba(19, 53, 123, 0.8);">
-                    <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Eg: Thailand">
-                    <button type="button" class="btn btn-primary rounded-pill py-2 px-4 position-absolute me-2" style="top: 50%; right: 46px; transform: translateY(-50%);">Search</button>
+                    <!-- <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Eg: Thailand"> -->
+                    <!-- <button type="button" class="btn btn-primary rounded-pill py-2 px-4 position-absolute me-2" style="top: 50%; right: 46px; transform: translateY(-50%);">Search</button> -->
                 </div>
             </div>
         </div>
@@ -164,8 +173,8 @@
         </div>
         <!-- About End -->
 
-        <!-- Services Start -->
-        <div class="container-fluid bg-light service py-5">
+       <!-- Services Start -->
+        <!-- <div class="container-fluid bg-light service py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Searvices</h5>
@@ -283,46 +292,46 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Services End -->
 
         <!-- Destination Start -->
         <div class="container-fluid destination py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                    <h5 class="section-title px-3">Destination</h5>
-                    <h1 class="mb-0">Popular Destination</h1>
+                    <h5 class="section-title px-3">Kegiatan</h5>
+                    <h1 class="mb-0">Desa Pete</h1>
                 </div>
                 <div class="tab-class text-center">
                     <ul class="nav nav-pills d-inline-flex justify-content-center mb-5">
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-1">
-                                <span class="text-dark" style="width: 150px;">All</span>
+                                <span class="text-dark" style="width: 150px;">Semua</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex py-2 mx-3 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
-                                <span class="text-dark" style="width: 150px;">USA</span>
+                                <span class="text-dark" style="width: 150px;">Rapat Koordinasi</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-3">
-                                <span class="text-dark" style="width: 150px;">Canada</span>
+                                <span class="text-dark" style="width: 150px;">Posyandu</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
-                                <span class="text-dark" style="width: 150px;">Europe</span>
+                                <span class="text-dark" style="width: 150px;">Ulang Tahun Desa</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
-                                <span class="text-dark" style="width: 150px;">China</span>
+                                <span class="text-dark" style="width: 150px;">Lomba</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-6">
-                                <span class="text-dark" style="width: 150px;">Singapore</span>
+                                <span class="text-dark" style="width: 150px;">Kesehatan</span>
                             </a>
                         </li>
                     </ul>
@@ -596,7 +605,7 @@
         <!-- Destination End -->
 
         <!-- Explore Tour Start -->
-        <div class="container-fluid ExploreTour py-5">
+        <!-- <div class="container-fluid ExploreTour py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Explore Tour</h5>
@@ -783,11 +792,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Explore Tour Start -->
 
         <!-- Packages Start -->
-        <div class="container-fluid packages py-5">
+        <!-- <div class="container-fluid packages py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Packages</h5>
@@ -928,11 +937,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Packages End -->
 
         <!-- Gallery Start -->
-        <div class="container-fluid gallery py-5 my-5">
+        <!-- <div class="container-fluid gallery py-5 my-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Our Gallery</h5>
                 <h1 class="mb-4">Tourism & Traveling Gallery.</h1>
@@ -1242,11 +1251,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Gallery End -->
 
         <!-- Tour Booking Start -->
-        <div class="container-fluid booking py-5">
+        <!-- <div class="container-fluid booking py-5">
             <div class="container py-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
@@ -1326,11 +1335,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Tour Booking End -->
 
         <!-- Travel Guide Start -->
-        <div class="container-fluid guide py-5">
+        <!-- <div class="container-fluid guide py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Travel Guide</h5>
@@ -1423,11 +1432,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Travel Guide End -->
 
         <!-- Blog Start -->
-        <div class="container-fluid blog py-5">
+        <!-- <div class="container-fluid blog py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Our Blog</h5>
@@ -1508,10 +1517,10 @@
                 </div>
             </div>
         </div>
-        <!-- Blog End -->
+        Blog End -->
 
         <!-- Testimonial Start -->
-        <div class="container-fluid testimonial py-5">
+        <!-- <div class="container-fluid testimonial py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Testimonial</h5>
@@ -1600,11 +1609,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Testimonial End -->
 
         <!-- Subscribe Start -->
-        <div class="container-fluid subscribe py-5">
+        <!-- <div class="container-fluid subscribe py-5">
             <div class="container text-center py-5">
                 <div class="mx-auto text-center" style="max-width: 900px;">
                     <h5 class="subscribe-title px-3">Subscribe</h5>
@@ -1617,7 +1626,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Subscribe End -->
 
         <!-- Footer Start -->
@@ -1640,7 +1649,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
+                    <!-- <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Company</h4>
                             <a href="index.html" class="nav-item nav-link active">Home</a>
@@ -1664,7 +1673,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
